# inq

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: main.yml  release.yml
inq/: __main__.py
