[project]
name = "inq"
version = "0.1.0"
description = "CLI for user input"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "inquirer-textual>=0.4.0",
    "typer>=0.21.1",
]

[project.scripts]
inq = "inq.__main__:cli"

[project.urls]
Changelog = "https://github.com/robvanderleek/inq/blob/master/CHANGELOG.md"
Documentation = "https://robvanderleek.github.io/inquirer-textual/"
Source = "https://github.com/robvanderleek/inq"

[dependency-groups]
dev = [
    "poethepoet>=0.39.0",
    "pyinstaller>=6.17.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poe.tasks.bundle]
help = "Create a binary executable using pyinstaller"
cmd = "pyinstaller --workpath .build --clean --noconfirm --specpath dist -n inq -F inq/__main__.py"

[tool.semantic_release]
branch = "main"
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [ "inq/version.py:version" ]
upload_to_repository = false
upload_to_release = false
allow_zero_version = true
